--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 Port=3000
 MONGO_URI=mongodb+srv://icj24:developer@cluster0.ghjp9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=Ankit3028k
+CLOUDINARY_CLOUD_NAME=dtezcrxpw
+CLOUDINARY_API_KEY=475758323835972
+CLOUDINARY_API_SECRET=6zJvEO3eanmlcbx4esTaSzR_gLg
